--- a/charts/oai-5g-core/oai-5g-basic/values.yaml
+++ b/charts/oai-5g-core/oai-5g-basic/values.yaml
@@ -92,8 +92,8 @@ oai-amf:
     nfRegistration: "yes"
     smfSelection: "no"        #Bug in SMF can not have SMF selection when using UDR to fetch user-information
     useHttp2: "no"
-    intAlgoList: '[ "NIA1" , "NIA1" , "NIA2" ]'
-    ciphAlgoList: '[ "NEA1" , "NEA1" , "NEA2" ]'
+    intAlgoList: '[ "NIA1" , "NIA2" ]'
+    ciphAlgoList: '[ "NEA0" , "NEA1" , "NEA2" ]'
   nodeSelector: {}
 oai-spgwu-tiny:
   enabled: true
