--- a/charts/oai-5g-core/oai-5g-basic/values.yaml
+++ b/charts/oai-5g-core/oai-5g-basic/values.yaml
@@ -121,12 +121,13 @@ oai-spgwu-tiny:
   includeTcpDumpContainer: false #only for taking pcaps inside network function pod
   imagePullSecrets:
     - name: "regcred"
-  multus:
-    create: false
-    n3Ip: "172.21.6.95"
-    n3Netmask: "22"
-    defaultGateway: "172.21.7.254"
-    hostInterface: "bond0"
+# TT: multus part commented to prevent demo-oai.sh to enable multus
+#  multus:
+#    create: false
+#    n3Ip: "172.21.6.95"
+#    n3Netmask: "22"
+#    defaultGateway: "172.21.7.254"
+#    hostInterface: "bond0"
   config:
     n3If: "eth0"  # net1 if gNB is outside the cluster network and multus creation is true else eth0
     n4If: "eth0" # use for SMF communication
