--- a/charts/oai-5g-core/oai-5g-basic/values.yaml
+++ b/charts/oai-5g-core/oai-5g-basic/values.yaml
@@ -121,13 +121,12 @@ oai-spgwu-tiny:
   includeTcpDumpContainer: false #only for taking pcaps inside network function pod
   imagePullSecrets:
     - name: "regcred"
-# TT: multus part commented to prevent demo-oai.sh to enable multus
-#  multus:
-#    create: false
-#    n3Ip: "172.21.6.95"
-#    n3Netmask: "22"
-#    defaultGateway: "172.21.7.254"
-#    hostInterface: "bond0"
+  multus:
+    create: false
+    n3Ip: "172.21.6.95"
+    n3Netmask: "22"
+    defaultGateway: "172.21.7.254"
+    hostInterface: "bond0"
   config:
     n3If: "eth0"  # net1 if gNB is outside the cluster network and multus creation is true else eth0
     n4If: "eth0" # use for SMF communication
@@ -180,12 +179,13 @@ oai-smf:
     # pullPolicy: IfNotPresent or Never or Always
     pullPolicy: IfNotPresent
   includeTcpDumpContainer: false #only for taking pcaps inside network function pod
-  multus:
-    create: false
-    n4IPadd: "172.21.6.98"
-    n4Netmask: "22"
-    defaultGateway: "172.21.7.254"
-    hostInterface: "bond0"      # Interface of the host machine on which this pod will be scheduled
+# TT: multus part commented to prevent demo-oai.sh to enable multus
+#  multus:
+#    create: false
+#    n4IPadd: "172.21.6.98"
+#    n4Netmask: "22"
+#    defaultGateway: "172.21.7.254"
+#    hostInterface: "bond0"      # Interface of the host machine on which this pod will be scheduled
   imagePullSecrets:
     - name: "regcred"
   securityContext:
